--- a/lesson_2/index.html
+++ b/lesson_2/index.html
@@ -31,7 +31,7 @@
          виключено, що для новачків перше уявлення може бути помилковим через відсутність досвіду або додаткову
          інформацію.
       </p>
-      З погляду об'єктивності було б неправильно міркувати, що плюси та мінуси для всіх фрілансерів однакові. Більше
+      <p>З погляду об'єктивності було б неправильно міркувати, що плюси та мінуси для всіх фрілансерів однакові. Більше
       того, в деяких випадках одна й та сама особливість може бути розглянута як з позитивної точки зору, так і з
       негативної.</p>
       <h3 id="new">Чому новачкам складно оцінити особливості фрілансу?</h3>
