--- a/lesson_5/index.html
+++ b/lesson_5/index.html
@@ -9,51 +9,49 @@
 </head>
 
 <body>
-   <div class="wrapper">
-      <header>
-      </header>
-      <main>
-         <div class="wrapper-small">
-            <div class="intro">
-               <h2 class="title-1 title">The purpose of our lives is to be happy.</h2>
-               <p>
-                  Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment. Uniquely foster revolutionary value whereas accurate communities.
-               </p>
-               <p>
-                  Conveniently engineer robust experiences after performance based initiatives. Credibly communicate strategic technology whereas turnkey functionalities. Professionally re-engineer magnetic markets for highly efficient functionalities. Efficiently fabricate user friendly opportunities for backward-compatible experiences. Competently scale team building relationships through real-time solutions.
-               </p>
-               <p>
-                  Interactively productivate cross-platform vortals through tactical results. Interactively underwhelm efficient alignments with enabled materials. Rapidiously leverage existing superior technology via fully researched e-commerce. Efficiently whiteboard principle-centered portals vis-a-vis magnetic solutions. Conveniently network ethical e-markets with emerging web services.
-               </p>
-            </div>
+   <header>
+   </header>
+   <main>
+      <div class="wrapper-small">
+         <div class="intro">
+            <h2 class="title-1 title">The purpose of our lives is to be happy.</h2>
+            <p>
+               Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment. Uniquely foster revolutionary value whereas accurate communities.
+            </p>
+            <p>
+               Conveniently engineer robust experiences after performance based initiatives. Credibly communicate strategic technology whereas turnkey functionalities. Professionally re-engineer magnetic markets for highly efficient functionalities. Efficiently fabricate user friendly opportunities for backward-compatible experiences. Competently scale team building relationships through real-time solutions.
+            </p>
+            <p class="last">
+               Interactively productivate cross-platform vortals through tactical results. Interactively underwhelm efficient alignments with enabled materials. Rapidiously leverage existing superior technology via fully researched e-commerce. Efficiently whiteboard principle-centered portals vis-a-vis magnetic solutions. Conveniently network ethical e-markets with emerging web services.
+            </p>
          </div>
-         <div class="banner">
-            <img src="img/01.jpg" alt="desert">
+      </div>
+      <div class="banner">
+         <img src="img/01.jpg" alt="desert">
+      </div>
+      <div class="wrapper-small">
+         <div class="middle">
+            <h2 class="title-2 title">Many of life’s failures are people who did not realize how close they were to success when they gave up.</h2>
+            <p>
+               Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment. Uniquely foster revolutionary value whereas accurate communities.
+            </p>
+            <p class="last">
+               Conveniently engineer robust experiences after performance based initiatives. Credibly communicate strategic technology whereas turnkey functionalities. Professionally re-engineer magnetic markets for highly efficient functionalities. Efficiently fabricate user friendly opportunities for backward-compatible experiences. Competently scale team building relationships through real-time solutions.
+            </p>
          </div>
-         <div class="wrapper-small">
-            <div class="middle">
-               <h2 class="title-2 title">Many of life’s failures are people who did not realize how close they were to success when they gave up.</h2>
-               <p>
-                  Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment. Uniquely foster revolutionary value whereas accurate communities.
-               </p>
-               <p>
-                  Conveniently engineer robust experiences after performance based initiatives. Credibly communicate strategic technology whereas turnkey functionalities. Professionally re-engineer magnetic markets for highly efficient functionalities. Efficiently fabricate user friendly opportunities for backward-compatible experiences. Competently scale team building relationships through real-time solutions.
-               </p>
-            </div>
+      </div>
+      <div class="img-container">
+         <img class="img-1" src="img/02.jpg" alt="girl">
+         <img class="img-2" src="img/03.jpg" alt="nature">
+      </div>
+      <div class="wrapper-small">
+         <div class="ending">
+            <p>Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment. </p>
          </div>
-         <div class="img-container">
-            <img class="img-1" src="img/02.jpg" alt="girl">
-            <img class="img-2" src="img/03.jpg" alt="nature">
-         </div>
-         <div class="wrapper-small">
-            <div class="ending">
-               <p>Quickly monetize synergistic portals via efficient e-commerce. Phosfluorescently reinvent frictionless intellectual capital vis-a-vis an expanded array of niches. Efficiently provide access to interactive scenarios vis-a-vis bleeding-edge value. Energistically maximize premium meta-services and multifunctional collaboration and idea-sharing. Dramatically unleash front-end value after out-of-the-box opportunities. Energistically streamline magnetic action items after global markets. Collaboratively scale backward-compatible leadership skills and 24/7 best practices. Objectively exploit emerging methodologies vis-a-vis functionalized ideas. Energistically reconceptualize out-of-the-box innovation vis-a-vis cooperative methods of empowerment. </p>
-            </div>
-         </div>
-      </main>
-      <footer>
-      </footer>
-   </div>
+      </div>
+   </main>
+   <footer>
+   </footer>
 </body>
 
 </html>
