--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_3/" target="_blank">Lesson 3</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_4/" target="_blank">Lesson 4</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_5/" target="_blank">Lesson 5</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_6/" target="_blank">Lesson 6</a></li>
    </ul>
 </body>
 </html>
