--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_5/" target="_blank">Lesson 5</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_6/" target="_blank">Lesson 6</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_7/" target="_blank">Lesson 7</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_8/" target="_blank">Lesson 8</a></li>
    </ul>
 </body>
 </html>
