--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_6/" target="_blank">Lesson 6</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_7/" target="_blank">Lesson 7</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_8/" target="_blank">Lesson 8</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_9/" target="_blank">Lesson 9</a></li>
    </ul>
 </body>
 </html>
