--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_8/" target="_blank">Lesson 8</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_9/" target="_blank">Lesson 9</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_10/" target="_blank">Lesson 10</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_11/" target="_blank">Lesson 11</a></li>
    </ul>
 </body>
 </html>
