--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_9/" target="_blank">Lesson 9</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_10/" target="_blank">Lesson 10</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_11/" target="_blank">Lesson 11</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_12/" target="_blank">Lesson 12</a></li>
    </ul>
 </body>
 </html>
