--- a/lesson_12/index.html
+++ b/lesson_12/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="en">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header></header>
+			<header>CSS Transform</header>
 			<main class="page">
 				<div class="page__container">
 						<div class="car">
@@ -41,7 +41,7 @@
 						</div>
 				</div>
 			</main>
-			<footer></footer>
+			<footer>2023</footer>
 		</div>
 	</body>
 </html>
