--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_10/" target="_blank">Lesson 10</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_11/" target="_blank">Lesson 11</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_12/" target="_blank">Lesson 12</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_13/" target="_blank">Lesson 13</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_14/" target="_blank">Lesson 14</a></li>
    </ul>
 </body>
