--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_12/" target="_blank">Lesson 12</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_13/" target="_blank">Lesson 13</a></li>
       <li><a href="https://volkivskatetyana.github.io/lessons/lesson_14/" target="_blank">Lesson 14</a></li>
+      <li><a href="https://volkivskatetyana.github.io/lessons/lesson_15/" target="_blank">Lesson 15</a></li>
    </ul>
 </body>
 </html>
