--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -10,9 +10,9 @@
 		<div class="wrapper">
 			<header class="header">
 				<div class="header__container">
-					<div class="header__logo">
+					<a href="#" class="header__logo">
 						<img src="img/icons/logo.svg" alt="logo">
-					</div>
+					</a>
 					<div class="header__menu menu">
 						<ul class="menu__list">
 							<li class="menu__item"><a href="#" class="menu__link">Home</a></li>
