--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -19,7 +19,7 @@
 							<li class="menu__item"><a href="#" class="menu__link">About Us</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">Services</a></li>
 							<li class="menu__item"><a href="#" class="menu__link active">Our Teams</a></li>
-							<li class="menu__item"><a href="#" class="menu__link_white button">Contact Us</a></li>
+							<li class="menu__item"><a href="#" class="menu__link menu__link_white button">Contact Us</a></li>
 						</ul>
 					</div>
 				</div>
@@ -122,7 +122,7 @@
 			</main>
 			<footer class="footer">
 				<div class="footer__container">					
-					<div class="header__logo">
+					<div class="footer__logo">
 						<img src="img/icons/logo.svg" alt="logo">
 					</div>
 					<div class="footer__copyrights">2023 Homework 15</div>
